# MC970-E3

./: .gitignore  .gitmodules  README.md
01-MatSum/: .clang-format  CMakeLists.txt  README.md  cenapad.pbs
01-MatSum/bench/: cenapad.csv  cenapad.txt  results.csv  results.py  timing.py
01-MatSum/src/: matsum-parallel.cu
02-Histogram/: CMakeLists.txt  README.md  cenapad.pbs
02-Histogram/bench/: cenapad.csv  cenapad.py  cenapad.txt  results.csv  results.py  timing.py
02-Histogram/src/: histogram-parallel.cu
03-Smoothing/: CMakeLists.txt  README.md  cenapad.pbs
03-Smoothing/bench/: cenapad.csv  cenapad.txt  results.csv  timing.py
03-Smoothing/src/: smooth-parallel.cu
